--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
 <div class="info">
     <img src="Emblem-The-World-Bank.jpg" height="75px" width="75px"
          vspace="5" hspace="5" alt="logo"/>
-    <div>
-        <h2>WORLD BANK</br>Publications</h2>
-    </div>
+        <h2 style="padding-left:5px">WORLD BANK</br>Publications</h2>
+        <h2 class="infonumber">8-800-100-5005</br>+7(3452)522-000</h2>
 </div>
 <div class="topnav">
     <nav class="nav">
